--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -74,6 +74,13 @@
     justify-content: center;
 }
 
+.brand-logo {
+    height: 45px;
+    width: auto;
+    max-width: 55px;
+    object-fit: contain;
+}
+
 .brand-text {
     display: flex;
     flex-direction: column;
